--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "pdfjs-dist": "^4.7.76",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dropzone": "^14.2.10",
+    "react-pdf": "^9.1.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/react-pdf": "^7.0.0",
     "@types/uuid": "^10.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
