--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@langchain/openai": "^0.3.11",
     "@pinecone-database/pinecone": "^4.0.0",
     "axios": "^1.7.7",
+    "form-data": "^4.0.1",
     "langchain": "^0.3.4",
     "multer": "1.4.5-lts.1",
     "next": "15.0.1",
@@ -21,7 +22,7 @@
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-dropzone": "^14.2.10",
-    "react-pdf": "^9.1.1",
+    "react-file-previewer": "^0.6.3",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
